Increase project-box top margin on mobile to fix header overlap
- Changed margin-top from 18rem to 20rem on screens ≤767px
- Changed margin-top from 18rem to 22rem on screens ≤450px
- Ensures project cards appear well below fixed header
- Fixes persistent overlap issue on mobile devices

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -517,13 +517,13 @@ ul {
 
 @media only screen and (max-width: 767px) {
   .project-box {
-    margin-top: 18rem;
+    margin-top: 20rem;
   }
 }
 
 @media only screen and (max-width: 450px) {
   .project-box {
-    margin-top: 18rem;
+    margin-top: 22rem;
   }
 }
 
